...
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:useDefaultMargins="true"
            android:alignmentMode="alignBounds"
            android:columnOrderPreserved="false"
            >
            <TextView
...
                />
            <EditText
                android:id="@+id/age"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
...
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/waistline"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
...
                />
            <TextView
                android:text="BMI (kg/square meter):"
                android:textSize="18dp"
                android:layout_gravity="left"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/familyHistoryTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:text="Male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/genderFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
...
                />
            <EditText
                android:id="@+id/bloodPressure"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/sedentaryJobTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                />
            <EditText
                android:id="@+id/exerciseT"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
...
                    android:text="Yes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/diagnosedDFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:text="Yes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/GDMFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                />
            <EditText
                android:id="@+id/weightB"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
...
                    android:text="Yes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/CCVDFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/PCOSTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:text="No"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/PCOSPNTA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                    android:text="Yes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/psychotropicFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/psychotropicPNTA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                />
            <EditText
                android:id="@+id/HDL_C"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
...
                />
            <EditText
                android:id="@+id/TG"
                android:textSize="18dp"
                android:text="@string/profile_no_data"
...
        <Button
            android:text="Submit"
            android:id="@+id/submitBtn"
            android:layout_row="8"
            android:layout_column="0"
...
