...
            android:layout_row="0"
            android:layout_column="0"
            />

        <Button
            android:text="Edit"
            android:id="@+id/editBtn"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center"
            />

    </GridLayout>
...
                android:gravity="right"
                />

            <TextView
                android:id="@+id/age"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="1"
                android:layout_column="1" />


            <TextView
...
                android:layout_gravity="right"
                android:layout_row="4"
                android:layout_width="240dp"
                android:gravity="right"/>

            <TextView
                android:id="@+id/familyHistory"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="4"
                android:layout_column="1" />

...
                android:layout_row="5"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/gender"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="5"
                android:layout_column="1"/>

...
                android:layout_row="7"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/sedentaryJob"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="7"
                android:layout_column="1" />

...
                android:layout_row="9"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/diagnosedD"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="9"
                android:layout_column="1" />

...
                android:layout_row="10"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/GDM"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="10"
                android:layout_column="1" />

...
                android:layout_row="12"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/CCVD"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="12"
                android:layout_column="1" />

...
                android:layout_row="13"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/PCOS"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="13"
                android:layout_column="1" />

...
                android:layout_row="14"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/psychotropic"
                android:textSize="18dp"
                android:text="10"
                android:layout_gravity="left"
                android:layout_row="14"
                android:layout_column="1" />

            <TextView
                android:paddingLeft="35dp"
                android:text="HDL Cholesterol (mmol/L):"
                android:textSize="18dp"
                android:layout_column="0"
                android:layout_gravity="right"
                android:layout_row="15"
                android:layout_width="240dp"
                android:gravity="right"
                />

            <TextView
                android:id="@+id/HDL_C"
...
