...
    <string name="reset_password_page_name">Reset Password</string>
    <string name="prompt_new_password_sent">Password has been sent to your email</string>
    <string name="error_fail_to_sent_reset_pw_email">Sorry, we are unable to process your request.</string>
    <!-- Qi's Firebase -->
    <string name="firebase_url">https://brilliant-fire-9755.firebaseio.com/</string>
    <string name="welcome">Welcome</string>
    <string name="action_logout">Logout</string>
    <string name="forget_password_link">Forget Password?</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="reset_password_button_prompt">Reset password</string>

    <!-- Home page strings -->
    <string name="home_page_title">Home</string>
    <string name="diagnosis_card_title">Diagnosis</string>
    <string name="diagnosis_card_preview_text">recommendation</string>

    <!-- Strings related to the Profile and Edit acitivities -->
    <string name="error_age">Invalid age.</string>
    <string name="error_waistline">Invalid waistline.</string>
    <string name="error_gender">Invalid gender.</string>
    <string name="error_num_format">Invalid number format.</string>
    <string name="profile_no_data">N/A</string>

    <!-- Diagnosis Page string -->
    <string name="diagnosis_page_name">Diagnosis Page</string>

    <!-- Edit Profile Page string -->
    <string name="edit_profile_page_name">Edit Profile</string>
...
